Alignment issue fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,5 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+.spacer20 { line-height: 20px !important;
+  clear: both;}
